# snake

./: .clang-format  .git-blame-ignore-revs  CMakeLists.txt  README.md
cmake/: GetGitRevisionDescription.cmake  version.cpp.in
src/: CMakeLists.txt  ImGuiWrapper.cpp  ImGuiWrapper.hpp  Snake.cpp  Snake.hpp  imgui_config.hpp  logging.cpp  logging.hpp  main.cpp  version.hpp
